<resources>
    <string name="TOKEN_SHARED">TOKEN_SHARED</string>
    <string name="TOKEN_TOKEN">TOKEN_TOKEN</string>
    <string name="TOKEN_ID">TOKEN_ID</string>

    <string name="app_name">DDMOpenEvents2</string>
    <string name="email">Email</string>
    <string name="your_password">Your Password</string>
    <string name="password">Password</string>
    <string name="openevents_2_0">OpenEvents 2.0</string>
    <string name="sing_in">SING IN</string>
    <string name="sing_up">SING UP</string>
    <string name="your_email">Your email</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="create_account">Create Account</string>
    <string name="your_first_name">Your first name</string>
    <string name="your_last_name">Your last name</string>
    <string name="img_jpg">img.jpg</string>
    <string name="events">Events</string>
    <string name="attend">ATTEND</string>
    <string name="create_event">Create Event</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="your_title">Your Title</string>
    <string name="your_description">Your Description</string>
    <string name="start_date">Start Date</string>
    <string name="select_a_date">Select a Date</string>
    <string name="end_date">End Date</string>
    <string name="cover_image">Cover Image</string>
    <string name="create_events">CREATE EVENTS</string>
    <string name="num_participants">Num.Participants</string>
    <string name="your_location">Your Location</string>
    <string name="location">Location</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_event">Edit Event</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="explore_events">Explore Events</string>
    <string name="my_events">My Events</string>
    <string name="my_timeline">My Timeline</string>
    <string name="my_messages">My Messages</string>
    <string name="search_users">Search Users</string>
    <string name="logout">Logout</string>
    <string name="search_users2">Search Users</string>
    <string name="users_results">Users Results:</string>
    <string name="search">Search</string>
    <string name="loading">Loading...</string>
    <string name="events_list">Events list:</string>
    <string name="user_data">User Data</string>
</resources>